# icfpc2017

./: .gitignore  LICENSE  Makefile  README.md  build-in-vm  icfpc2017.cabal  online  punter  run-and-vis  stack.yaml  state.json
app/: Main.hs  RunVisualisation.hs
app/evolver/: Main.hs
app/punter/: Main.hs
app/visualise/: Main.hs
evolver/: Main.hs
examples/: Sierpinski-triangle.json  boston-sparse.json  circle.json  edinburgh-sparse.json  gothenburg-sparse.json  lambda.json  nara-sparse.json  oxford-center-sparse.json  oxford2-sparse-2.json  randomMedium.json  randomSparse.json  sample.json  tube.json  van-city-sparse.json
src/: GamePlay.hs  Lib.hs  Offline.hs  Strategy.hs  Types.hs  Visualiser.hs
visualiser/: elm-package.json  index.html
visualiser/src/: Decoders.elm  GraphHelpers.elm  Main.elm  Types.elm  Visualiser.elm
