name:                icfpc2017
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/purcell/icfpc2017#readme
license:             BSD3
license-file:        LICENSE
author:              The Flux Ambassadors
maintainer:          steve@sanityinc.com
copyright:           2017 Steve Purcell
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Types
                     , Visualiser
                     , Offline
                     , GamePlay
  build-depends:       base >= 4.7 && < 5
                     , blaze-svg
                     , aeson
                     , bytestring
                     , containers
                     , mtl
                     , text
                     , unordered-containers

  default-language:    Haskell2010
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates

executable icfpc2017
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , bytestring
                     , icfpc2017
  default-language:    Haskell2010

executable visualise
  hs-source-dirs:      app
  main-is:             RunVisualisation.hs
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -threaded -rtsopts -with-rtsopts=-N -main-is RunVisualisation
  build-depends:       base
                     , aeson
                     , bytestring
                     , icfpc2017
  default-language:    Haskell2010

executable evolver
  hs-source-dirs:      evolver
  main-is:             Main.hs
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , icfpc2017
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/purcell/icfpc2017
